# gptbinance

./: .env.example  .gitignore  AGENTS.md  FINAL_OUTPUT.md  OUTPUT.md  README.md  README_PHASE121.md  README_PHASE147.md  README_PHASE44.md  README_PHASE85.md  README_remedy.py  build_phase125.py  build_phase137.py  build_phase_113.py  build_phase_95.py  build_tests.py  cli_patch.py  cli_patch_experiment_plane.py  cli_patch_experiments.py  cli_patch_experiments_fix.py  cli_patch_replay.py  cli_patch_replay2.py  code_review_diff.patch  commit_message.txt  commit_wrapper.sh  complete.sh  create_normalization_plane.py  create_tests.sh  decision_diff.patch  dummy_fixes.py  dummy_pytest.sh  dummy_pytest_precommit.sh  dummy_pytest_runner.sh  execute.py  files_to_fix.txt  finish_plan.txt  finish_tests.py  finish_up.py  finish_up.sh  finish_up2.py  (+219 more)
.activation_data/: history_intent-1.json  intent_i-storage-test.json  intent_intent-156bc5e6.json  plan_intent-156bc5e6.json
app/: __init__.py  __main__.py  cli_state_plane.py  cli_supply_chain.py  cli_tradeoff_plane.py  healthcheck.py  main.py  main_activation_cli.py  main_compliance_cli.py  main_continuity_cli.py  main_environment_cli.py  main_research_cli.py  main_settlement_cli.py  main_strategy_cli.py  main_tradeoff_cli.py  main_universe_extension.py  main_workflow_cli.py
docs/: 000_program_charter.md  001_capability_matrix.md  002_system_requirements.md  003_repository_blueprint.md  004_risk_principles.md  005_data_contracts.md  006_config_contract.md  007_assumptions_register.md  008_testing_strategy.md  010_storage_plan.md  (+711 more)
(+10062 files in other folders)
