[tool.poetry]
name = "trading-platform"
version = "0.1.0"
description = ""
authors = ["AI <ai@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
